--- a/app/templates/sections/services.html
+++ b/app/templates/sections/services.html
@@ -8,12 +8,13 @@
 <div class="w-full bg-gallery lg:h-[600px] h-[580px]">
     <div class="max-w mx-auto mr-10 lg:ml-10 ml-[30px] flex lg:flex-row flex-col  justify-center gap-[15px]">
 
-        <div class="relative lg:h-[250px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] mt-[50px] flex items-center z-10 lg:ml-[200px] ">
+        <div class="relative lg:h-[200px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] mt-[50px] flex items-center z-10
+         lg:ml-[200px] ">
             <img src="{{ url_for('static', filename ='icons/home.png') }}" 
             alt="Beard Service" 
-            class="lg:w-[80px] w-[50px] lg:h-[80px] h-[50px] ml-[6px] mr-[6px] object-contain">
+            class="lg:w-[70px] w-[50px] lg:h-[70px] h-[50px] ml-[6px] mr-[6px] object-contain color-white">
             
-            <div class="w-[2.5px] lg:h-[180px] h-[100px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[150px] h-[100px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
                 <span class="lg:text-4xl text-2xl font-faustina font-bold">Home Service</span>
@@ -23,12 +24,12 @@
             </div>
         </div>
 
-        <div class="relative lg:h-[250px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10">
+        <div class="relative lg:h-[200px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10">
             <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
             alt="Beard Service" 
-            class="lg:w-[95px] w-[65px] lg:h-[95px] h-[65px] object-contain">
+            class="lg:w-[85px] w-[65px] lg:h-[85px] h-[65px] object-contain">
             
-            <div class="w-[2.5px] lg:h-[180px] h-[100px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[150px] h-[100px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
                 <span class="lg:text-4xl text-2xl font-faustina font-bold">Regular Haircut</span>
@@ -38,12 +39,12 @@
             </div>
         </div>
 
-        <div class="relative lg:h-[250px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10 lg:mr-[200px]">
+        <div class="relative lg:h-[200px] h-[140px] lg:w-[650px] w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10 lg:mr-[200px]">
             <img src="{{ url_for('static', filename ='icons/chair.png') }}" 
             alt="Beard Service" 
-            class="lg:w-[95px] w-[65px] lg:h-[95px] h-[65px] object-contain">
+            class="lg:w-[85px] w-[65px] lg:h-[85px] h-[65px] object-contain">
             
-            <div class="w-[2.5px] lg:h-[180px] h-[100px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[150px] h-[100px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
                 <span class="lg:text-4xl text-2xl font-faustina font-bold">Full Service</span>
