--- a/app/templates/sections/location.html
+++ b/app/templates/sections/location.html
@@ -15,8 +15,8 @@
 <body class="antialiased  text-gray-900 ">
     <!-- Hero / Title -->
     <header class="bg-black w-full border-t-2 border-b-2 border-white relative z-10">
-        <div class="max-w-6xl mx-auto lg:h-[110px] h-[80px] flex items-center justify-center px-6">
-            <h1 class="font-playfair font-semibold text-2xl lg:text-4xl text-white">Visit Us for Fresh Cut</h1>
+        <div class="max-w-6xl mx-auto lg:h-[90px] h-[80px] flex items-center justify-center px-6">
+            <h1 class="font-playfair font-semibold text-2xl lg:text-[30px] text-white">Visit Us for Fresh Cut</h1>
         </div>
     </header>
 
