--- a/app/templates/sections/feedback.html
+++ b/app/templates/sections/feedback.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <div class="bg-black w-full lg:h-[100px] h-[80px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
-        <h1 class="font-playfair text-center font-semibold lg:text-[35px] text-[25px] text-white">We Value Your Feedback</h1>
+    <div class="bg-black w-full lg:h-[90px] h-[80px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+        <h1 class="font-playfair text-center font-semibold lg:text-[30px] text-[25px] text-white">We Value Your Feedback</h1>
     </div>
-    <div class="w-auto h-auto flex flex-col lg:flex-row justify-center p-6 gap-4 bg-[#191919]">
+    <div class="w-auto lg:h-[500px] h-auto flex flex-col lg:flex-row justify-center p-6 lg:gap-4 bg-[#191919]">
 
         {# Ratings & Reviews column - column 1 of 3 #}
     {% set ratings_counts = ratings_counts | default({5: 8, 4: 1, 3: 0, 2: 0, 1: 1}) %}
@@ -32,7 +32,7 @@
                {# Right column: Rate our service form #}
 
         
-        <section class="bg-white rounded-lg p-4 max-w-sm lg:w-[330px] w-[320px] h-[190px] mt-15 shadow-[4px_4px_10px_rgba(255,255,255,0.3),
+        <section class="bg-white rounded-lg p-4 max-w-sm lg:w-[330px] w-[320px] h-[190px] lg:mt-[60px] mt-[15px] shadow-[4px_4px_10px_rgba(255,255,255,0.3),
             -4px_-4px_10px_rgba(255,255,255,0.3)] hover:shadow-[4px_4px_16px_rgba(255,255,255,0.6),-4px_-4px_16px_rgba(255,255,255,0.6)] 
             transition duration-300">
     <div class="flex flex-col items-start">
@@ -87,7 +87,7 @@
     </div>
 </section>
 
-       <section class="bg-white rounded-lg p-4 w-auto h-[230px] lg:w-[350px] mb-15 mt-15 shadow-[4px_4px_10px_rgba(255,255,255,0.3),
+       <section class="bg-white rounded-lg p-4 w-auto h-[230px] lg:w-[350px] mb-15 lg:mt-[60px] mt-[15px] shadow-[4px_4px_10px_rgba(255,255,255,0.3),
             -4px_-4px_10px_rgba(255,255,255,0.3)] hover:shadow-[4px_4px_16px_rgba(255,255,255,0.6),-4px_-4px_16px_rgba(255,255,255,0.6)] 
             transition duration-300">
 
@@ -141,7 +141,7 @@
             {'name':'Leopard Lucy','rating':2,'date':'2025-08-10T16:45:00Z','text':'I went for the first time and unfortunately I wasn\'t impressed. The barber seemed rushed and didn\'t listen to what I asked for.'}
         ]) %}
 
-        <section class="bg-transparent w-full lg:w-[500px] flex flex-col gap-2 mt-15">
+        <section class="bg-transparent w-full lg:w-[500px] flex flex-col gap-2 lg:mt-[60px] mt-[15px]">
     {% for c in comments %}
     <article class="bg-white rounded-lg shadow p-3 relative">
         <div class="flex">
