--- a/app/templates/sections/gallery.html
+++ b/app/templates/sections/gallery.html
@@ -1,12 +1,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@600&family=Faustina:wght@400;700&family=Lato:wght@300&display=swap" rel="stylesheet">
 <body class="">
-<div class="bg-black w-full lg:h-[100px] h-[80px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
-  <h1 class="font-playfair font-semibold lg:text-[35px] text-[25px] text-white">GALLERY</h1>
-  <p class="font-lato font-light lg:text-[18px] text-[13px] text-gray-300 -mt-2">Meticulously Crafted Artworks</p>
+<div class="bg-black w-full lg:h-[90px] h-[80px] flex flex-col items-center justify-center border-t-2 border-b-2 border-white relative z-10">
+  <h1 class="font-playfair font-semibold lg:text-[30px] text-[25px] text-white">GALLERY</h1>
+  <p class="font-lato font-light lg:text-[15px] text-[13px] text-gray-300 -mt-2">Meticulously Crafted Artworks</p>
 </div>
 
 <!-- Infinite Scroll Gallery -->
-<div class="relative lg:h-screen h-[500px] overflow-hidden bg-gallery py-10">
+<div class="relative lg:h-[900px] h-[500px] overflow-hidden bg-gallery py-10">
     <div class="fixed inset-0 bg-black/1 z-0"></div>
   <div id="gallery-track-left" class="flex min-w-max lg:gap-4 gap-2 lg:mb-4 mb-2 animate-scroll-left relative z-10">
     {% for img, title, subtitle in [
