--- a/app/templates/emel-calendar.html
+++ b/app/templates/emel-calendar.html
@@ -12,9 +12,9 @@
 <body class="min-h-screen flex flex-col justify-center items-center bg-gallery">
     <div class="fixed inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
 <section class="w-full flex-1 flex justify-center items-center">
-<div class="w-full h-auto flex flex-col md:flex-row justify-center items-start p-6 gap-6 z-10">
+<div class="w-full h-auto flex flex-row lg:flex-row md:flex-col justify-center items-start p-6 gap-6 z-10">
 
-    <div class="bg-black p-4 sm:p-6 rounded-lg shadow-lg w-auto border-2 border-white">
+    <div class="bg-black p-4 sm:p-6 rounded-lg shadow-lg w-auto border-2 border-white ml-0 lg:ml-0 md:ml-[120px]">
         <div class="flex justify-between items-center mb-4">
             <button id="prevMonth" class="px-2 sm:px-3 py-1 bg-white text-black rounded hover:bg-gray-300">&lt;</button>
             <h2 id="monthYear" class="text-lg text-white font-semibold"></h2>
@@ -34,7 +34,7 @@
     </div>
     </div>
 
-<div class="bg-black text-white md:w-[450px] min-h-[400px] self-start p-6 rounded-xl shadow-md border-2 border-white">
+<div class="bg-black text-white md:w-[450px] min-h-[400px] self-start p-6 rounded-xl shadow-md border-2 border-white ml-0 lg:ml-0 md:ml-[150px]">
      <div class="flex flex-row items-center justify-between">
         <div>
         <h2 class="text-sm font-normal mb-4">Select appointment time:</h2>
@@ -125,7 +125,7 @@
 
 
      <!-- Appointment Section (Right) -->
-    <div class="bg-black text-white md:w-auto md:h-auto p-5 rounded-xl shadow-md border-2 border-white">
+    <div class="bg-black text-white md:w-auto md:h-auto p-5 rounded-xl shadow-md border-2 border-white ml-0 lg:ml-0 md:ml-[180px]">
         <h2 class="text-lg font-normal mb-4">Schedule Information:</h2>
         
 
