--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -49,14 +49,14 @@
     }
     @media (min-width: 768px){
         .back-to-top{
-            width: 100px;
+            width: 85px;
             height: 40px;
             border-radius: 8px;
             bottom: 1.5rem;
             right: 1.5rem;
         }
         .back-to-top::before{
-            content: 'Back to top';
+            content: 'Book now';
             font-size: 10px;
     }
 }
