--- a/app/templates/sections/footer.html
+++ b/app/templates/sections/footer.html
@@ -14,9 +14,9 @@
   <div class="content">
     <img src="{{ url_for('static', filename='images/logo.jpg') }}" class="logo">
     <p class="lg:text-3xl text-3xl font-bold font-faustina lg:mt-3">Slick Grind Barber</p>
-    <p class="lg:text-base text-sm lg:mt-[-1.5px] mt-[-30px] font-faustina">Visit our shop and rediscover your confidence.</p>
-    <p class="lg:text-base text-xs lg:mt-[-1.5px] mt-[-30px] font-faustina">Monday to Saturday: 9:00 AM to 5:00 PM</p>
-    <p class="lg:text-base text-xs lg:mt-[-1.5px] mt-[-30px] font-faustina">Sunday: Closed</p>
+    <p class="lg:text-base text-sm lg:mt-[-1.5px] mt-[-30px] md:mt-[2px] font-faustina">Visit our shop and rediscover your confidence.</p>
+    <p class="lg:text-base text-xs lg:mt-[-1.5px] mt-[-30px] md:mt-[2px] font-faustina">Monday to Saturday: 9:00 AM to 5:00 PM</p>
+    <p class="lg:text-base text-xs lg:mt-[-1.5px] mt-[-30px] md:mt-[2px] font-faustina">Sunday: Closed</p>
     <ul class="sm">
       <li><a href="#"><img src="{{ url_for('static', filename='icons/facebook (3).png') }}" class="socials"></a></li>
       <li><a href="#"><img src="{{ url_for('static', filename='icons/phone (2).png') }}" class="phone"></a></li>
