--- a/app/templates/sections/gallery.html
+++ b/app/templates/sections/gallery.html
@@ -6,7 +6,7 @@
 </div>
 
 <!-- Infinite Scroll Gallery -->
-<div class="relative lg:h-[900px] h-[500px] overflow-hidden bg-gallery py-10">
+<div class="relative lg:h-[900px] md:h-[600px] h-[500px] overflow-hidden bg-gallery py-10">
     <div class="fixed inset-0 bg-black/1 z-0"></div>
   <div id="gallery-track-left" class="flex min-w-max lg:gap-4 gap-2 lg:mb-4 mb-2 animate-scroll-left relative z-10">
     {% for img, title, subtitle in [
@@ -19,7 +19,7 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
+                  lg:h-[400px] md:h-[250px] md:w-[200px] h-[200px] lg:w-[300px]  w-[150px] overflow-hidden 
                   transition-transform duration-900 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
@@ -48,7 +48,7 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] md:h-[250px] md:w-[200px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
@@ -79,7 +79,7 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] md:h-[250px] md:w-[200px] overflow-hidden 
                   transition-transform duration-100 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
@@ -108,7 +108,7 @@
       ('images/h4.jpg', 'Buzz Cut', 'Low-maintenance clean look...'),
     ] %}
       <div class="relative group flex-shrink-0 
-                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] overflow-hidden 
+                  lg:h-[400px] h-[200px] lg:w-[300px] w-[150px] md:h-[250px] md:w-[200px] overflow-hidden 
                   transition-transform duration-500 ease-in-out 
                   hover:scale-[1.01] hover:shadow-[0_0_20px_rgba(255,255,255,0.3)] border-[2px] rounded-[5px] border-white">
 
