--- a/app/templates/barber.html
+++ b/app/templates/barber.html
@@ -13,14 +13,14 @@
     <div class="fixed inset-0 bg-black/40 backdrop-blur-sm z-0"></div>
 <section class="w-full flex-1 flex justify-center items-center">
 
-        <div class="w-auto h-auto flex flex-col md:flex-row justify-center items-start p-6 gap-6 z-10">
+        <div class="w-auto h-auto flex flex-row lg:flex-row md:flex-col justify-center items-start p-6 gap-6 z-10">
 
             <!-- Barber Images (Left, side by side inside black background) -->
-            <div class="flex flex-col gap-5 bg-black p-6 sm:p-6 md:p-10 lg:p-10 rounded-xl  border-2 border-white w-[330px] sm:w-[330px] md:w-[350px] lg:w-auto">
-                <h2 class="text-white text-sm ml-2 font-montserrat sm:text-sm md:text-lg lg:text-lg ">Select a barber for your appointment:</h2>
+            <div class="flex flex-col gap-5 bg-black p-6 sm:p-6 md:p-10 lg:p-10 rounded-xl  border-2 border-white w-[330px] sm:w-[330px] md:w-auto lg:w-auto">
+                <h2 class="text-white text-sm ml-2 font-montserrat sm:text-sm md:text-sm lg:text-lg ">Select a barber for your appointment:</h2>
 
-            <div class="flex flex-row gap-4 justify-center flex-wrap">
-                <div class="relative h-[300px] w-[240px] sm:w-[240px] md:w-[280px] lg:w-[280px] bg-black rounded-[25px] border-4 border-white
+            <div class="flex flex-row lg:flex-row md:flex-row gap-4 justify-center flex-wrap">
+                <div class="relative h-[300px] w-[240px] sm:w-[240px] md:w-[250px] lg:w-[280px] bg-black rounded-[25px] border-4 border-white
                     hover:scale-95 hover:shadow-[0_0_20px_rgba(255,255,255,0.8)]
                     transition duration-500 ease-in-out group overflow-hidden">
 
@@ -49,7 +49,7 @@
                     </div>
                 </div>
 
-        <div class="relative h-[300px] w-[240px] sm:w-[240px] md:w-[280px] lg:w-[280px] mb-4 bg-black rounded-[25px] border-4 border-white
+        <div class="relative h-[300px] w-[240px] sm:w-[240px] md:w-[250px] lg:w-[280px] mb-4 bg-black rounded-[25px] border-4 border-white
                     hover:scale-95 hover:shadow-[0_0_20px_rgba(255,255,255,0.8)]
                     transition duration-500 ease-in-out group overflow-hidden">
                     <img src="{{ url_for('static', filename='images/boboy.jpg') }}"
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Appointment Section (Right) -->
-    <div class="bg-black text-white md:w-auto md:h-auto p-6 rounded-xl shadow-md border-2 border-white">
+    <div class="bg-black text-white w-auto h-auto p-6 rounded-xl shadow-md border-2 border-white ml-0 lg:ml-0 md:ml-[85px]">
         <h2 class="text-lg font-normal mb-4">Schedule Information:</h2>
  
 
