--- a/app/templates/sections/artist.html
+++ b/app/templates/sections/artist.html
@@ -6,14 +6,14 @@
         <p class="font-lato font-light lg:text-[15px] text-[13px] text-gray-300 -mt-2">Creator Behind Arts</p>
     </div>
 
-    <div class="w-full bg-gallery lg:h-[700px] h-[650px]">
-        <div class=" mx-auto flex flex-col md:flex-row justify-center gap-2 z-10">
+    <div class="w-full bg-gallery lg:h-[700px] md:h-[550px] h-[650px]">
+        <div class=" mx-auto flex flex-col md:flex-row justify-center gap-2 z-10 md:mb-[60px]">
 
              <!-- EMEL CALOMOS -->
             <div class="relative h-[250px] w-[200px] bg-black rounded-[15px] border-[3px] border-white 
-                lg:h-[450px] lg:w-[390px] md:w-[390px] md:h-[390px] sm:h-[350px] sm:w-[290px]
+                lg:h-[450px] lg:w-[390px] md:w-[300px] md:h-[350px] sm:h-[350px] sm:w-[290px]
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-[60px] lg:mt-28 ml-[80px] z-10">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden mt-[60px] lg:mt-28 lg:ml-[80px] md:ml-[50px] md:mr-[15px] lg:mr-[50px] md:mt-[80px] md:mb-[60px] z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -26,7 +26,7 @@
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100"
                     style="font-family:'Faustina', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
-                    <h1 class="text-white font-playfair lg:text-5xl text-2xl font-semibold mb-5">
+                    <h1 class="text-white font-playfair lg:text-5xl md:text-4xl text-2xl font-semibold mb-5">
                     Emel Calomos
                     </h1>
                     <h1 class="text-white lg:text-base text-xs font-semibold text-center absolute lg:top-[80%] top-[65%] md:top-[80%] right-1/2 opacity-0 translate-x-[150%]
@@ -42,7 +42,7 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-lg lg:text-3xl font-semibold
+                <div class="absolute lg:bottom-[20px] md:bottom-[15px] bottom-[8px] left-[8px] lg:left-[20px] md:left-[15px] text-white text-lg lg:text-3xl md:text-2xl font-semibold
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
@@ -60,9 +60,9 @@
 
                 <!-- ANGELO PABALLA -->
             <div class="relative h-[250px] w-[200px] bg-black rounded-[15px] border-[3px] border-white
-                 lg:h-[450px] lg:w-[390px] md:w-[390px] md:h-[390px] sm:h-[350px] sm:w-[290px]
+                 lg:h-[450px] lg:w-[390px] md:w-[300px] md:h-[350px] sm:h-[350px] sm:w-[290px]
                 hover:scale-[1.01] hover:shadow-[0_0_30px_rgba(255,255,255,0.7)]
-                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden lg:mt-28 mt-4 ml-[80px] z-10">
+                transition-transform transition-shadow duration-[1000ms] ease-[cubic-bezier(0.4,0,0.2,1)] group overflow-hidden lg:mt-28 mt-4 md:mt-[80px] ml-[80px] md:mr-[50px] md:ml-[15px] lg:ml-[50px] md:mb-[60px] z-10">
 
                 <!-- Image (blurs on hover) -->
                 <img
@@ -75,7 +75,7 @@
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[-25%] group-hover:opacity-100"
                     style="font-family:'Faustina', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
-                    <h1 class="text-white font-playfair lg:text-5xl text-2xl font-semibold mb-5">
+                    <h1 class="text-white font-playfair lg:text-5xl md:text-4xl text-2xl font-semibold mb-5">
                     Angelo Paballa
                     </h1>
                     <h1 class="text-white lg:text-base text-xs font-semibold text-center absolute lg:top-[80%] top-[65%] md:top-[80%] right-1/2 opacity-0 translate-x-[150%]
@@ -91,7 +91,7 @@
                 </div>
 
                 <!-- Name label -->
-                <div class="absolute lg:bottom-[20px] bottom-[8px] left-[8px] lg:left-[20px] text-white text-lg lg:text-3xl font-semibold
+                <div class="absolute lg:bottom-[20px] md:bottom-[15px] bottom-[8px] left-[8px] lg:left-[20px] md:left-[15px] text-white text-lg lg:text-3xl md:text-2xl font-semibold
                     transition-all duration-[1500ms] ease-[cubic-bezier(0.4,0,0.2,1)] whitespace-nowrap
                     group-hover:-translate-x-[150%] group-hover:opacity-0"
                     style="font-family:'Play Fair', serif; text-shadow: 4px 4px 6px rgba(0,0,0,0.8);">
