--- a/app/templates/sections/location.html
+++ b/app/templates/sections/location.html
@@ -52,34 +52,34 @@
                     <div class="w-42 h-32 mb-3">
                         <img src="{{ url_for('static', filename='images/Slick.jpg') }}" alt="Slick Grind Barber logo" class="w-full h-full object-cover rounded-md" />
                     </div>
-                    <h3 class="font-faustina text-2xl font-semibold">Slick Grind Barber</h3>
-                    <p class="text-[12px] text-gray-600 text-center">Drop by or to book an appointment.</p>
+                    <h3 class="font-faustina text-2xl lg:text-3xl md:text-4xl font-semibold">Slick Grind Barber</h3>
+                    <p class="text-[12px] lg:text-[12px] md:text-[15px] text-gray-600 text-center">Drop by or to book an appointment.</p>
                 </div>
 
                 <div class="bg-white rounded-xl p-4 shadow-sm border border-gray-200">
-                    <h4 class="font-mont font-semibold mb-3">Contact</h4>
+                    <h4 class="font-montserrat font-semibold mb-3 md:text-[20px] text-[20px] lg:text-[17px] text-center">Contact</h4>
                     <nav aria-label="Location contact">
                         <ul class="flex flex-col gap-3">
                             <li class="flex items-center gap-3">
-                                <img src="{{ url_for('static', filename='icons/instagram.png') }}" alt="Instagram icon" class="w-7 h-7" />
-                                <a href="" class="text-sm text-blue-600 hover:underline">Instagram</a>
+                                <img src="{{ url_for('static', filename='icons/instagram.png') }}" alt="Instagram icon" class="w-7 h-7 lg:h-7 lg:w-7 md:w-9 md:h-9" />
+                                <a href="" class="text-sm lg:text-sm md:text-[16px] text-blue-600 hover:underline">Instagram</a>
                             </li>
 
                             <li class="flex items-center gap-3">
-                                <img src="{{ url_for('static', filename='icons/facebook.png') }}" alt="Facebook icon" class="w-7 h-7" />
-                                <a href="" class="text-sm text-blue-600 hover:underline">Facebook</a>
+                                <img src="{{ url_for('static', filename='icons/facebook.png') }}" alt="Facebook icon" class="w-7 h-7 lg:h-7 lg:w-7 md:w-9 md:h-9" />
+                                <a href="" class="text-sm lg:text-sm md:text-[16px] text-blue-600 hover:underline">Facebook</a>
                             </li>
 
                             <li class="flex items-center gap-3">
-                                <img src="{{ url_for('static', filename='icons/gmail-logo.png') }}" alt="Gmail icon" class="w-7 h-7.5" />
-                                <a href="mailto:info@slickgrind.example" class="text-sm text-blue-600 hover:underline">Gmail</a>
+                                <img src="{{ url_for('static', filename='icons/gmail-logo.png') }}" alt="Gmail icon" class="w-7 h-7.5 lg:w-7 lg:h-7.5 md:w-9 md:h-9.5" />
+                                <a href="mailto:info@slickgrind.example" class="text-sm lg:text-sm md:text-[16px] text-blue-600 hover:underline">Gmail</a>
                             </li>
 
                             <li class="flex items-start gap-3">
-                                <img src="{{ url_for('static', filename='icons/phone.png') }}" alt="Phone icon" class="w-5.5 h-8 ml-1 mt-1" />
+                                <img src="{{ url_for('static', filename='icons/phone.png') }}" alt="Phone icon" class="w-5.5 h-8 lg:w-5.5 lg:h-8 ml-1 mt-1 md:w-7.5 md:h-10" />
                                 <div class="flex flex-col leading-tight">
-                                    <a href="tel:+639095553904" class="text-sm text-blue-600 hover:underline">+63-909-555-3904</a>
-                                    <a href="tel:+639075557690" class="text-sm text-blue-600 hover:underline">+63-907-555-7690</a>
+                                    <a href="tel:+639095553904" class="text-sm lg:text-sm md:text-[16px] text-blue-600 hover:underline">+63-909-555-3904</a>
+                                    <a href="tel:+639075557690" class="text-sm lg:text-sm md:text-[16px] text-blue-600 hover:underline">+63-907-555-7690</a>
                                 </div>
                             </li>
                         </ul>
@@ -87,8 +87,8 @@
                 </div>
 
                 <div class="bg-white rounded-xl p-4 shadow-sm border border-gray-200">
-                    <h4 class="font-mont font-semibold mb-2">Hours</h4>
-                    <ul class="text-sm text-gray-700">
+                    <h4 class="font-monteserrat text-center text-[15px] lg:text-[17px] md:text-[20px] font-semibold mb-2">Hours</h4>
+                    <ul class="text-sm lg:text-sm md:text-[16px] md:text-center text-gray-700">
                         <li>Monday to Saturday: 9:00AM - 5:00PM</li>
                         <li>Sunday: Closed</li>
                     </ul>
