--- a/app/templates/sections/services.html
+++ b/app/templates/sections/services.html
@@ -5,52 +5,52 @@
         <h1 class="font-playfair font-semibold lg:text-[30px] text-[25px] text-white">SERVICES</h1>
 </div>
 
-<div class="w-full bg-gallery lg:h-[500px] h-[500px]">
-    <div class="max-w mx-auto ml-[30px] flex lg:flex-row flex-col  justify-center gap-[15px]">
+<div class="w-full bg-gallery lg:h-[500px] md:h-[600px] h-[500px]">
+    <div class="max-w mx-auto ml-[30px] flex lg:flex-row flex-col md:items-center justify-center gap-[15px]">
 
-        <div class=" lg:h-[200px] h-[120px] lg:w-full w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] mt-[50px] flex items-center z-10
+        <div class=" lg:h-[200px] h-[120px] md:h-[150px] lg:w-full w-[300px] md:w-[400px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] mt-[50px] flex items-center z-10
          lg:ml-[200px] ">
             <img src="{{ url_for('static', filename ='icons/home.png') }}" 
             alt="Beard Service" 
             class="lg:w-[70px] w-[50px] lg:h-[70px] h-[50px] ml-[6px] mr-[6px] object-contain color-white">
             
-            <div class="w-[2.5px] lg:h-[150px] h-[90px] bg-black mx-[10px]"></div>
+            <div class="w-[3px] lg:h-[150px] md:h-[110px] h-[90px] bg-black mx-[12px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="lg:text-4xl text-2xl font-faustina font-bold">Home Service</span>
-                <span class="lg:text-sm text-[10px] font-faustina text-gray-500">
+                <span class="lg:text-4xl md:text-3xl text-2xl font-faustina font-bold">Home Service</span>
+                <span class="lg:text-sm md:text-[15px] text-[10px] font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="lg:text-lg text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
+                    <span class="lg:text-lg md:text-[20px] text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
             </div>
         </div>
 
-        <div class=" lg:h-[200px] h-[120px] lg:w-full w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10">
+        <div class=" lg:h-[200px] h-[120px] md:h-[150px] lg:w-full w-[300px] md:w-[400px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10">
             <img src="{{ url_for('static', filename ='icons/erazor.png') }}" 
             alt="Beard Service" 
             class="lg:w-[85px] w-[65px] lg:h-[85px] h-[65px] object-contain">
             
-            <div class="w-[2.5px] lg:h-[150px] h-[90px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[150px] md:h-[110px] h-[90px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="lg:text-4xl text-2xl font-faustina font-bold">Regular Haircut</span>
-                <span class="lg:text-sm text-[10px] font-faustina text-gray-500">
+                <span class="lg:text-4xl md:text-3xl text-2xl font-faustina font-bold">Regular Haircut</span>
+                <span class="lg:text-sm md:text-[15px] text-[10px] font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="lg:text-lg text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
+                    <span class="lg:text-lg md:text-[20px] text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
             </div>
         </div>
 
-        <div class=" lg:h-[200px] h-[120px] lg:w-full w-[300px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10 lg:mr-[200px]">
+        <div class=" lg:h-[200px] h-[120px] md:h-[150px] lg:w-full w-[300px] md:w-[400px] bg-white border-black border-[3px] p-[8px] lg:rounded-[25px] rounded-[15px] lg:mt-[150px] flex items-center z-10 lg:mr-[200px]">
             <img src="{{ url_for('static', filename ='icons/chair.png') }}" 
             alt="Beard Service" 
             class="lg:w-[85px] w-[65px] lg:h-[85px] h-[65px] object-contain">
             
-            <div class="w-[2.5px] lg:h-[150px] h-[90px] bg-black mx-[10px]"></div>
+            <div class="w-[2.5px] lg:h-[150px] md:h-[110px] h-[90px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="lg:text-4xl text-2xl font-faustina font-bold">Full Service</span>
-                <span class="lg:text-sm text-[10px] font-faustina text-gray-500">
+                <span class="lg:text-4xl md:text-3xl text-2xl font-faustina font-bold">Full Service</span>
+                <span class="lg:text-sm md:text-[15px] text-[10px] font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
-                    <span class="lg:text-lg text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
+                    <span class="lg:text-lg md:text-[20px] text-base font-faustina font-semibold lg:mt-2 mt-[2px]">₱ 250.00 </span>
             </div>
         </div>
 
